@@ -1,9 +1,12 @@
 VDR Plugin 'ttxtsubs' Revision History
 --------------------------------------
 
-201x-xx-xx: Version x.x.x
+2012-04-xx: Version x.x.x
 - Removed obsolete (unused since 0.2.0) setup options: DVB Source Selection,
   Live Delay, Record Subtitles, and Workaround for some French chns.
+- Added hard-coded workaround for french channels where page numbes 850-859
+  must be mapped to 880-889 (Closes #865, #703)
+  (Thx to Jussi Tepponen!)
 
 2011-10-08: Version 0.2.4
 - Updated patch for VDR 1.7.21 (Closes #745)
